--- a/index78ce.html
+++ b/index78ce.html
@@ -1,8 +1,8 @@
 <HTML>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from indogoods.id/?madxartwork_library=footer by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jan 2023 17:56:01 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- /?madxartwork_library=footer   17:56:01 GMT -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=index.html"><TITLE>Page has moved</TITLE>
 </HEAD>
@@ -11,5 +11,5 @@
 </BODY>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from indogoods.id/?madxartwork_library=footer by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Jan 2023 17:56:01 GMT -->
+<!-- /?madxartwork_library=footer   17:56:01 GMT -->
 </HTML>
